--- a/web_dynamic/translations/fr/LC_MESSAGES/messages.po
+++ b/web_dynamic/translations/fr/LC_MESSAGES/messages.po
@@ -27,6 +27,9 @@ msgstr "Commodité"
 msgid "Search"
 msgstr "Recherche"
 
+msgid "Places"
+msgstr "Hébergement"
+
 msgid "Cozy Apartment"
 msgstr "Appartement Confortable"
 
@@ -41,3 +44,18 @@ msgstr "Brosse à dents"
 
 msgid "bathtub"
 msgstr "baignoire"
+
+msgid "Price per night:"
+msgstr "Prix par nuit:"
+
+msgid "Max guests:"
+msgstr "Nombre maximal d'invités:"
+
+msgid "Number of rooms:"
+msgstr "Nombre de chambres:"
+
+msgid "Number of bathrooms:"
+msgstr "Nombre de salles de bains:"
+
+msgid "Location:"
+msgstr "Localisation:"
